test: :white_check_mark: Update pytest.init with new markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,9 @@ markers =
     db_filter_by_sell_in : Test those items by sell_in from the result of query
     db_filter_by_quality : Test those items by quality from the result of query
     db_get_items : Test all Items from Database
+    delete_item_db : Test all delete item tests from db
+    update_quality_db : Test all update quality tests from db
+    add_item_db : Test all add item tests from db
 
 ### MONGO DB MARKERS ###
 
