test: :white_check_mark: Update mark of resources test with: resource_test mark

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
     delete_item_db : Test all delete item tests from db
     update_quality_db : Test all update quality tests from db
     add_item_db : Test all add item tests from db
+    resource_test : Test all test cases of resources
 
 ### MONGO DB MARKERS ###
 
